align style fix

--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -6,9 +6,10 @@
     margin-left  : calc( -100vw / 2 + 100% / 2 );
     margin-right : calc( -100vw / 2 + 100% / 2 );
     max-width    : 100vw;
+    width: auto;
 }
 .alignfull img {
-    width: 100vw;
+    width: auto;
 }
 
 .screen-reader-text {
